--- a/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
@@ -35,7 +35,8 @@
             <div class="d-flex flex-wrap gap-1 col-12 justify-content-center"
                  th:if="${partidaIniciada}">
                 <!-- NORMALES -->
-                <div class="d-flex gap-1" th:if="${mostrarRespuestasJ1 || (leTocaResponder != null && leTocaResponder.getNumero() == 1)}">
+                <div class="d-flex gap-1"
+                     th:if="${mostrarRespuestasJ1 || (leTocaResponder != null && leTocaResponder.getNumero() == 1)}">
                     <a class="btn btn-primary"
                        th:href="@{/accion(mano=${mano.getId()}, accion=2, jugador=1)}">Envido
                     </a>
@@ -50,71 +51,67 @@
                     </a>
                 </div>
                 <!-- RESPUESTAS TRUCO -->
-                <div id="respuestas1" th:if="${mostrarRespuestasEnvidoJ1 || (leTocaResponder != null && leTocaResponder.getNumero() == 1)}">
-                    <!-- NUEVA LÓGICA -->
+                <div id="respuestas1"
+                     th:if="${mostrarRespuestasEnvidoJ1 || (leTocaResponder != null && leTocaResponder.getNumero() == 1)}">
                     <a class="btn btn-primary"
                        th:href="@{/respuesta(mano=${mano.getId()}, respuesta=1, jugador=1, accion=${accionAResponder})}">Quiero
                     </a>
                     <a class="btn btn-primary"
-                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=0, jugador=1, accion=${accionAResponder})}">No Quiero
+                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=0, jugador=1, accion=${accionAResponder})}">No
+                        Quiero
                     </a>
                     <a class="btn btn-primary"
-                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=6, jugador=1, accion=${accionAResponder})}">Re Truco
+                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=6, jugador=1, accion=${accionAResponder})}">Re
+                        Truco
                     </a>
                     <a class="btn btn-primary"
-                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=7, jugador=1, accion=${accionAResponder})}">Vale Cuatro
+                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=7, jugador=1, accion=${accionAResponder})}">Vale
+                        Cuatro
                     </a>
                 </div>
                 <!-- RESPUESTAS ENVIDO -->
-                <div id="respuestas" th:if="${mostrarRespuestasTrucoJ1 || (leTocaResponder != null && leTocaResponder.getNumero() == 1)}">
+                <div id="respuestas"
+                     th:if="${mostrarRespuestasTrucoJ1 || (leTocaResponder != null && leTocaResponder.getNumero() == 1)}">
                     <a class="btn btn-primary"
-                       th:href="@{'/respuesta?accion=' + accion.getNro()
-                                  + '&mano=' + mano.getId()
-                                  + '&ronda= ' + ronda.getNro()
-                                  + '&respuesta=1&jugador=1'}">Quiero
+                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=1, jugador=1, accion=${accionAResponder})}">Quiero
                     </a>
                     <a class="btn btn-primary"
-                       th:href="@{'/respuesta?accion=' + accion.getNro()
-                                  + '&mano=' + mano.getId()
-                                  + '&ronda= ' + ronda.getNro()
-                                  + '&respuesta=0&jugador=1'}">No Quiero
+                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=0, jugador=1, accion=${accionAResponder})}">No
+                        Quiero
                     </a>
                     <a class="btn btn-primary"
-                       th:href="@{'/respuesta?accion=' + accion.getNro()
-                                  + '&mano=' + mano.getId()
-                                  + '&ronda= ' + ronda.getNro()
-                                  + '&respuesta=3&jugador=1'}">Real Envido
+                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=3, jugador=1, accion=${accionAResponder})}">Real
+                        Envido
                     </a>
                     <a class="btn btn-primary"
-                       th:href="@{'/respuesta?accion=' + accion.getNro()
-                                  + '&mano=' + mano.getId()
-                                  + '&ronda= ' + ronda.getNro()
-                                  + '&respuesta=4&jugador=1'}">Falta Envido
+                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=4, jugador=1, accion=${accionAResponder})}">Falta
+                        Envido
                     </a>
                 </div>
             </div>
             <!-- CARTAS  -->
             <div class="gap-2 cartasJugadorContainer col-4">
-                <!--     ?ronda={id}&idCarta={id}&nroJugador=1           -->
                 <th:block th:each="carta : ${cartasJugador1}" th:if="${turnoJugador == 1}">
                     <a th:href="@{/accion-tirar(cartaId=${carta.id}, manoId=${mano.id}, nroJugador=1)}"
                        class="cartaTirarBtn">
                         <img th:src="@{${carta.img}}" alt="Carta" th:attr="data-id=${carta.id}" class="carta"/>
                     </a>
                 </th:block>
-
             </div>
         </div>
 
         <!-- CARTAS TIRADAS -->
         <div id="cartas-en-juego" class="d-flex flex-wrap order-1">
-            <div class="col-4">
-                <a th:href="@{/comenzar-truco}">
-                    <img id="mazo" th:src="@{/img/cartas-truco/mazo2.png}" alt="Mazo de Cartas">
+            <div class="col-4 bor3">
+                <a th:href="@{/comenzar-truco}" th:if="${ganador == null}" class="w-100">
+                    <img class="mazo bor2" th:src="@{/img/cartas-truco/mazo2.png}" alt="Mazo de Cartas">
+                </a>
+                <a th:if="${ganador != null}" class="w-100">
+                    <img class="mazo bor1" th:src="@{/img/cartas-truco/mazo2.png}" alt="Mazo de Cartas">
                 </a>
             </div>
-            <div id="texto-repartir" th:if="${partidaIniciada == false}" class="col-4">
-                <img th:src="@{/img/cartas-truco/repartir-cartas-v2.png}">
+            <div id="texto-repartir" th:if="${partidaIniciada == false}" class="col-8">
+                <img th:src="@{/img/cartas-truco/repartir-cartas-v2.png}" alt="Texto repartir">
             </div>
             <div class="col-4 d-flex flex-column flex-wrap gap-1" th:if="${partidaIniciada == true}">
                 <div class="d-flex justify-content-center gap-2" th:if="${cartasTiradasJ1 != null}">
@@ -125,15 +122,26 @@
                 </div>
             </div>
             <div class="col-4 d-flex flex-column justify-content-center align-items-center">
-                <p th:if="${puntosJ1 != null}"
-                   th:text="${jugador1.nombre + ' ' + puntosJ1}"></p>
-                <p th:if="${puntosJ2 != null}"
-                   th:text="${jugador2.nombre + ' ' + puntosJ2}"></p>
-                <p th:if="${turnoJugador != null}" th:text="'Turno de jugador ' + ${turnoJugador}"></p>
-                <a th:if="${seTermino}"
-                   class="btn btn-danger"
-                   th:text="'Jugar otra mano'"
-                   th:href="@{/cambiar-mano}"></a>
+                <div th:if="${ganador != null}">
+                    <p>Ganó <strong th:text="${ganador.getNombre()}"></strong>!</p>
+                    <a class="btn btn-danger"
+                       th:href="@{/salir}">Salir</a>
+                </div>
+                <div th:if="${ganador == null}">
+                    <p th:if="${puntosJ1 != null}"
+                       th:text="${jugador1.nombre + ' ' + puntosJ1}"></p>
+                    <p th:if="${puntosJ2 != null}"
+                       th:text="${jugador2.nombre + ' ' + puntosJ2}"></p>
+                    <p th:if="${turnoJugador != null}"
+                       th:text="'Turno de jugador ' + ${turnoJugador}"></p>
+                    <p th:if="${partida != null}"
+                       th:text="'Partida a  ' + ${partida.getPuntosParaGanar() +  ' puntos'}"></p>
+                    <a th:if="${seTermino}"
+                       class="btn btn-danger"
+                       th:text="'Jugar otra mano'"
+                       th:href="@{/cambiar-mano}"></a>
+                </div>
+
             </div>
         </div>
 
@@ -143,7 +151,8 @@
             <div class="d-flex flex-wrap gap-1 col-12 justify-content-center"
                  th:if="${partidaIniciada}">
                 <!-- NORMALES -->
-                <div class="d-flex gap-1" th:if="${mostrarRespuestasJ2 || (leTocaResponder != null && leTocaResponder.getNumero() == 2)}">
+                <div class="d-flex gap-1"
+                     th:if="${mostrarRespuestasJ2 || (leTocaResponder != null && leTocaResponder.getNumero() == 2)}">
                     <a class="btn btn-primary"
                        th:href="@{/accion(mano=${mano.getId()}, accion=5, jugador=2)}">Envido
                     </a>
@@ -163,30 +172,37 @@
                        th:href="@{/respuesta(mano=${mano.getId()}, respuesta=1, jugador=2, accion=${accionAResponder})}">Quiero
                     </a>
                     <a class="btn btn-primary"
-                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=0, jugador=2, accion=${accionAResponder})}">No Quiero
+                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=0, jugador=2, accion=${accionAResponder})}">No
+                        Quiero
                     </a>
                     <a class="btn btn-primary"
-                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=3, jugador=2, accion=${accionAResponder})}">Real Envido
+                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=3, jugador=2, accion=${accionAResponder})}">Real
+                        Envido
                     </a>
                     <a class="btn btn-primary"
-                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=4, jugador=2, accion=${accionAResponder})}">Falta Envido
+                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=4, jugador=2, accion=${accionAResponder})}">Falta
+                        Envido
                     </a>
                     <!-- FIN NUEVA LÓGICA -->
                 </div>
                 <!-- RESPUESTAS TRUCO -->
-                <div id="respuesta1" th:if="${mostrarRespuestasEnvidoJ2 || (leTocaResponder != null && leTocaResponder.getNumero() == 2)}">
+                <div id="respuesta1"
+                     th:if="${mostrarRespuestasEnvidoJ2 || (leTocaResponder != null && leTocaResponder.getNumero() == 2)}">
                     <!-- NUEVA LÓGICA -->
                     <a class="btn btn-primary"
                        th:href="@{/respuesta(mano=${mano.getId()}, respuesta=1, jugador=2, accion=${accionAResponder})}">Quiero
                     </a>
                     <a class="btn btn-primary"
-                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=0, jugador=2, accion=${accionAResponder})}">No Quiero
+                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=0, jugador=2, accion=${accionAResponder})}">No
+                        Quiero
                     </a>
                     <a class="btn btn-primary"
-                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=6, jugador=2, accion=${accionAResponder})}">Re Truco
+                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=6, jugador=2, accion=${accionAResponder})}">Re
+                        Truco
                     </a>
                     <a class="btn btn-primary"
-                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=7, jugador=2, accion=${accionAResponder})}">Vale Cuatro
+                       th:href="@{/respuesta(mano=${mano.getId()}, respuesta=7, jugador=2, accion=${accionAResponder})}">Vale
+                        Cuatro
                     </a>
                 </div>
             </div>
@@ -202,51 +218,10 @@
             </div>
         </div>
     </div>
-
-    <!--  INFORMACIÓN PARA DESARROLLO  -->
-    <h3 th:text="${movimientos != null ? 'Movimientos realizados (máx 6): ' + movimientos + ' movimientos.' : 'No comenzado.'}"></h3>
-    <h3 th:if="${puntosEnJuego != null}" th:text="${'Puntos en juego: ' + puntosEnJuego}"></h3>
-    <h3 th:if="${terminada != null}"
-        th:text="${terminada ? 'Listo, se terminó' : 'Continuar jugando.'}"></h3>
-    <div class="tabla-datos">
-        <!-- Verifica si la lista de rondas no es null ni está vacía -->
-        <!--        <div th:if="${rondas != null and !rondas.isEmpty()}">-->
-        <!--            <table class="table table-striped table-bordered">-->
-        <!--                <thead class="thead-dark">-->
-        <!--                <tr>-->
-        <!--                    <th>NRO RONDA</th>-->
-        <!--                    <th>ID JUGADOR</th>-->
-        <!--                    <th>VALOR</th>-->
-        <!--                    <th>NRO + PALO</th>-->
-        <!--                </tr>-->
-        <!--                </thead>-->
-        <!--                <tbody>-->
-        <!--                <tr th:each="ronda : ${rondas}">-->
-        <!--                    <td th:text="${ronda.nroRonda}"></td>-->
-        <!--                    <td th:text="${ronda.jugador.nombre}"></td>-->
-        <!--                    <td th:text="${ronda.valorCarta}"></td>-->
-        <!--                    &lt;!&ndash; Concatenación con Thymeleaf usando |...| &ndash;&gt;-->
-        <!--                    <td th:text="|${ronda.nroCarta} ${ronda.palo}|"></td>-->
-        <!--                </tr>-->
-        <!--                </tbody>-->
-        <!--            </table>-->
-        <!--        </div>-->
-        <!--        &lt;!&ndash; Mensaje cuando la lista está vacía o es null &ndash;&gt;-->
-        <!--        <div th:if="${rondas == null or rondas.isEmpty()}">-->
-        <!--            <p>No hay rondas jugadas aún.</p>-->
-        <!--        </div>-->
-    </div>
-    <!-- Mensaje cuando la lista está vacía o es null -->
-    <div th:if="${manos == null or manos.isEmpty()}">
-        <p>No hay ganador de mano aún</p>
-    </div>
-
     <p th:if="${jugador1 != null}" th:text="${jugador1}"></p>
     <p th:if="${jugador2 != null}" th:text="${jugador2}"></p>
     <p th:if="${partida != null}" th:text="${partida}"></p>
-
 </main>
-
 <!-- Footer -->
 <footer>
     <div class="footer-container">
