--- a/src/main/webapp/WEB-INF/views/thymeleaf/modificar-perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/modificar-perfil.html
@@ -2,88 +2,115 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Modificar Perfil</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
-
     <!-- Estilos generales -->
     <link rel="stylesheet" th:href="@{/css/general.css}"/>
-
     <!-- Estilo custom -->
     <link rel="stylesheet" th:href="@{/css/modificar-perfil.css}"/>
+    <title>Modificar Perfil</title>
 </head>
 <body>
-
-
-
-    <header class="col-12 d-flex align-items-center">
-        <div class="col-10 mx-auto d-flex align-items-center justify-content-between">
-            <h1 th:text="'Bienvenido ' + ${nombreUsuario}"></h1>
-            <nav class="d-flex flex-wrap gap-5 align-items-center fs-5">
-                <!-- th:href="@{/perfilUsuario}" -->
-                <a class="text-decoration-none text-white" th:href="@{/perfil}">
-                    <!-- th:src="@{/img/usuario.png}" -->
-                    <img id="usuario" alt="Usuario" th:src="@{/img/usuario.png}"/>
-                </a>
-                <a href="" class="text-decoration-none text-white fs-5">
-                    <!-- th:src="@{/img/configuracion.png}" -->
-                    <img id="configuracion" alt="Configuracion" th:src="@{/img/configuracion.png}"/>
-                </a>
-                <button class="closeSessionBtn">Cerrar sesión</button>
-            </nav>
-        </div>
-    </header>
-
-    <div id="formulario">
-        <h2>Configuracion</h2>
-        <p th:if="${error}" th:text="${error}" style="color: red;"></p>
-            <form th:action="@{/actualizar-perfil}" method="post" th:object="${datosUsuario}">
-                <div class="form-group">
-                    <label for="nombre">Nombre</label>
-                    <input th:field="*{nombreUsuario}" type="text" id="nombre" name="nombre" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="email">Correo Electrónico</label>
-                    <input  th:field="*{email}" type="email" id="email" name="email" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="password">Contraseña</label>
-                    <input th:field="*{password}" type="password" id="password" name="password" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="password">Confirmar contraseña</label>
-                    <input th:field="*{confirmPassword}" type="password" id="confirmar-password" name="confirmPassword" required>
-                </div>
-
-                <div class="form-group">
-                    <button type="submit">Aceptar</button>
-                </div>
-            </form>
+<header class="col-12 d-flex align-items-center">
+    <div class="col-10 mx-auto d-flex align-items-center justify-content-between">
+        <h3 th:text="${usuario.getNombreUsuario() + ' estas editando tu perfil'}"></h3>
+        <nav class="d-flex flex-wrap gap-5 align-items-center fs-5">
+            <a class="text-decoration-none text-white" th:href="@{/perfil}">
+                <img id="usuario" alt="Usuario" th:src="@{/img/usuario.png}"/>
+            </a>
+            <a href="" class="text-decoration-none text-white fs-5">
+                <img id="configuracion" alt="Configuracion" th:src="@{/img/configuracion.png}"/>
+            </a>
+            <button class="btn btn-danger">Cerrar sesión</button>
+        </nav>
     </div>
-
-    <footer class="col-12 py-4 d-flex flex-column gap-2">
-        <div class="footerWrapper col-10 mx-auto d-flex align-items-center text-white">
-            <div class="col-4 d-flex flex-wrap justify-content-center gap-4">
-                <div><img th:src="@{/img/logos/javalogo.webp}" class="footerImage"/></div>
-                <div><img th:src="@{/img/logos/springlogo.svg}" class="footerImage"/></div>
+</header>
+<main class="col-12 styledMain">
+    <div class="d-flex col-4 mx-auto flex-column gap-2 bg-white rounded-1">
+        <h2 class="m-0">Editar perfil</h2>
+        <p th:if="${error}" th:text="${error}" class="text-danger m-0 mx-auto"></p>
+        <form th:action="@{/actualizar-perfil}"
+              method="post"
+              th:object="${usuario}"
+              class="p-4">
+            <div class="form-group col-12">
+                <label for="nombre">Nombre de usuario</label>
+                <input th:field="*{nombreUsuario}"
+                       type="text"
+                       id="nombre"
+                       name="nombre">
             </div>
-            <div class="col-4 d-flex flex-column align-items-center gap-2 flex-wrap fs-5 separationBar">
-                <p>Victoria Croce</p>
-                <p>Lucas Gavagnin</p>
-                <p>Gonzalo Ramos</p>
-                <p>Franco Vargas</p>
-                <p>Martin Zaccardo</p>
+            <div class="form-group">
+                <label for="email">Correo Electrónico</label>
+                <input th:field="*{email}"
+                       type="email"
+                       id="email"
+                       name="email">
             </div>
-            <div class="col-4 d-flex flex-wrap justify-content-center">
-                <div><img th:src="@{/img/logos/unlamsinfondo.svg}" class="footerImage"/></div>
+            <div class="form-group">
+                <label for="password">Contraseña (completar si deseas cambiarla)</label>
+                <input th:field="*{password}"
+                       type="password"
+                       id="password"
+                       name="password">
+            </div>
+            <div class="form-group">
+                <label for="password">Confirmar contraseña</label>
+                <input th:field="*{confirmPassword}"
+                       type="password"
+                       id="confirmar-password"
+                       name="confirmPassword">
+            </div>
+            <input type="hidden" th:field="*{id}" name="id">
+            <button type="submit" class="btn btn-primary col-12">Actualizar</button>
+        </form>
+    </div>
+    <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Actualizar usuario</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p th:text="${mensajeModal}">Mensaje predeterminado.</p>
+                </div>
+                <div class="modal-footer">
+                    <a th:href="@{/perfil}" class="btn btn-secondary">Volver</a>
+                </div>
             </div>
         </div>
-        <hr class="col-10 mx-auto text-white"/>
-        <p class="py-1 text-center fs-5 text-white">&copy; 2024 UNLaM. Todos los derechos reservados.</p>
-    </footer>
-
+    </div>
+</main>
+<footer class="col-12 py-4 d-flex flex-column gap-2">
+    <div class="footerWrapper col-10 mx-auto d-flex align-items-center text-white">
+        <div class="col-4 d-flex flex-wrap justify-content-center gap-4">
+            <div><img th:src="@{/img/logos/javalogo.webp}" class="footerImage"/></div>
+            <div><img th:src="@{/img/logos/springlogo.svg}" class="footerImage"/></div>
+        </div>
+        <div class="col-4 d-flex flex-column align-items-center gap-2 flex-wrap fs-5 separationBar">
+            <p>Victoria Croce</p>
+            <p>Lucas Gavagnin</p>
+            <p>Gonzalo Ramos</p>
+            <p>Franco Vargas</p>
+            <p>Martin Zaccardo</p>
+        </div>
+        <div class="col-4 d-flex flex-wrap justify-content-center">
+            <div><img th:src="@{/img/logos/unlamsinfondo.svg}" class="footerImage"/></div>
+        </div>
+    </div>
+    <hr class="col-10 mx-auto text-white"/>
+    <p class="py-1 text-center fs-5 text-white">&copy; 2024 UNLaM. Todos los derechos reservados.</p>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script th:inline="javascript">
+    /* <![CDATA[ */
+    var mostrarModal = /*[[${mostrarModal}]]*/ false;
+    if (mostrarModal) {
+        var myModal = new bootstrap.Modal(document.getElementById('myModal'));
+        myModal.show();
+    }
+    /* ]]> */
+</script>
 </body>
 </html>
