--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
@@ -27,20 +27,15 @@
     </nav>
 </header>
 <main class="col-12 d-flex flex-column align-items-center">
-    <div class="col-12 col-md-10 pt-md-3 userData">
+    <div class="col-12 col-md-10 userData">
         <div class="col-12 position-relative userHeader d-flex justify-content-center">
             <div class="col-12 imgStyle bg-dark position-relative"></div>
             <div class="rounded-circle position-absolute p-5 userImage"></div>
         </div>
 
         <div class="col-12 d-flex flex-column justify-content-center align-items-center text-white py-2">
-
-            <!-- <p class="fs-3 fw-semibold m-0" th:text="${datosUsuario.getEmail()}"></p> -->
-            <!-- <p th:text="${datosUsuario.getEmail()}"></p> -->
-
-
-            <p class="fs-3 fw-semibold m-0" th:text="${fullname}"></p>
-            <p th:text="${username}"></p>
+            <p class="fs-3 fw-semibold m-0" th:text="${usuario.getNombreUsuario()}"></p>
+            <p th:text="${usuario.getEmail()}"></p>
         </div>
         <div class="px-2 px-md-0 pt-2">
             <div class="gameWrapper col-md-12">
