--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfil.html
@@ -39,44 +39,28 @@
         </div>
         <div class="px-2 px-md-0 pt-2">
             <div class="gameWrapper col-md-12">
-                <div class="gameInfo bg-black text-white">
+                <!--  ESTADISTICAS  -->
+                <div class="gameInfo bg-black text-white" th:each="estadistica : ${estadisticas}">
                     <div class="gameFirstCol">
                         <div class="rounded-circle p-5 gameImage"></div>
                     </div>
                     <div class="gameSecondCol d-flex flex-column gap-1 justify-content-between p-1">
                         <div class="col-12 d-flex justify-content-between">
-                            <p>Nombre juego</p>
-                            <p>Nivel 777</p>
+                            <p th:text="${estadistica.getJuego()}">Nombre juego</p>
+                            <p th:text="${'Ratio: ' + estadistica.getRatio()}">Ratio 777%</p>
+
                         </div>
-                        <div class="col-12 progressBar px-2">
-                            Barra de progreso
-                        </div>
-                        <div class="col-12 d-flex flex-wrap justify-content-between">
-                            <p>Rockie</p>
-                            <div class="d-flex flex-wrap gap-2">
-                                <p>Partidas: 500</p>
-                                <p>Ganadas: 0</p>
+                        <div class="progress col-12">
+                            <div class="progress-bar" role="progressbar"
+                                 th:style="'width:' + ${estadistica.getProgresoNivel()} + '%;'"
+                                 th:text="${estadistica.getProgresoNivel() + '%'}">
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="gameInfo bg-black text-white">
-                    <div class="gameFirstCol">
-                        <div class="rounded-circle p-5 gameImage"></div>
-                    </div>
-                    <div class="gameSecondCol d-flex flex-column gap-1 justify-content-between p-1">
-                        <div class="col-12 d-flex justify-content-between">
-                            <p>Nombre juego</p>
-                            <p>Nivel 777</p>
-                        </div>
-                        <div class="col-12 progressBar px-2">
-                            Barra de progreso
-                        </div>
                         <div class="col-12 d-flex flex-wrap justify-content-between">
-                            <p>Rockie</p>
+                            <p th:text="${estadistica.calcularNivel()}">Nivel</p>
                             <div class="d-flex flex-wrap gap-2">
-                                <p>Partidas: 500</p>
-                                <p>Ganadas: 0</p>
+                                <p th:text="${'Jugadas: ' + estadistica.getJugadas()}">Partidas: 777</p>
+                                <p th:text="${'Ganadas: ' + estadistica.getGanadas()}">Ganadas: -777</p>
                             </div>
                         </div>
                     </div>
