--- a/src/main/webapp/resources/core/css/perfil.css
+++ b/src/main/webapp/resources/core/css/perfil.css
@@ -20,6 +20,23 @@
     height: 200px;
 }
 
+.progress {
+    width: 100%;
+    background-color: #e0e0e0;
+    border-radius: 5px;
+    overflow: hidden;
+    height: 20px;
+    padding: 0.25rem;
+}
+
+.progress-bar {
+    height: 100%;
+    background-color: #007bff;
+    text-align: center;
+    color: white;
+    line-height: 20px;
+}
+
 .userImage {
     bottom: 0;
     width: 150px;
