--- a/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
@@ -19,7 +19,7 @@
         <div><img th:src="@{/img/logos/unlamsinfondo.svg}" class="headerImage"/></div>
     </div>
     <div>
-        <a th:href="@{/volver-home}">Volver al menu</a>
+        <a th:href="@{/home}">Volver al menu</a>
     </div>
 </header>
 
