--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -16,10 +16,10 @@
 <body>
 <header class="col-12 d-flex align-items-center">
     <div class="col-10 mx-auto d-flex align-items-center justify-content-between">
-        <h1 th:text="'Bienvenido ' + ${usuario.getNombreUsuario()}"></h1>
+        <h1 th:text="${usuario != null} ? 'Bienvenido ' + ${usuario.getNombreUsuario()} : 'Bienvenido Invitado'"></h1>
         <nav class="d-flex flex-wrap gap-5 align-items-center fs-5">
             <!-- th:href="@{/perfilUsuario}" -->
-            <a class="text-decoration-none text-white" th:href="@{/perfil(id=${usuario.getId()})}">
+            <a class="text-decoration-none text-white" th:href="@{/perfil(id=${usuario.id})}">
                 <!-- th:src="@{/img/usuario.png}" -->
                 <img id="usuario" alt="Usuario" th:src="@{/img/usuario.png}"/>
             </a>
